--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "chai": "^4.2.0",
     "ethers": "^6.4.0",
     "hardhat": "^2.17.1",
+    "hardhat-contract-sizer": "^2.10.0",
     "hardhat-gas-reporter": "^1.0.8",
     "solidity-coverage": "^0.8.0",
+    "tqdm": "^2.0.3",
     "typechain": "^8.1.0"
   }
 }
